test/resources/invalid/com/boothj5/jarchexample/application/person/controller/PersonController.java
package com.boothj5.jarchexample.application.person.controller;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.person.facade.PersonFacade;
import com.boothj5.jarchexample.application.person.service.PersonService;
import com.boothj5.jarchexample.application.person.repository.PersonRepository;
import com.boothj5.jarchexample.application.person.dao.PersonDAO;
